<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.moetaz.bakingapp.fragments.StepInfoFragment">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">

    </include>
    <ImageView
        android:id="@+id/video_img"
        android:visibility="gone"
        android:layout_weight="4"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />


    <TextView
        android:textColor="#000"
        android:padding="@dimen/desc_padding"
        android:id="@+id/stepdesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="4"
        android:text="test"
        android:textSize="@dimen/step_desc_textsize" />

    <RelativeLayout
        android:layout_margin="5dp"
        android:id="@+id/relativeStep"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/navi_width"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="@dimen/navi_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_arrow_forward" />
    </RelativeLayout>

</LinearLayout>
