<resources>
    <string name="app_name">BakingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Recipe_ingredients">Recipe ingredients</string>
    <string name="app_Title">Baking App</string>
    <string name="title_activity_display_message">Recipe</string>

    <string-array name="PicsLinks">
        <item>http://topamericanpie.com/wp-content/uploads/2015/05/Nutella-Pie-4.png</item>
        <item>http://theglorifiedtomato.com/wp-content/uploads/2013/04/brownies.png</item>
        <item>https://www.asweetpeachef.com/wp-content/uploads/2010/07/nanas-golden-chiffon-cake-and-a-lesson-in-grief2.png</item>
        <item>https://ketogenicwoman.com/wp-content/uploads/2013/12/Keto-Lemon-Cheese-Cake.png</item>
    </string-array>
</resources>
