<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_height="100dp"
    app:cardCornerRadius="15dp"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/sample_icon"
        android:padding="5dp"
        android:src="@drawable/play_icon"
        android:layout_width="60dp"
        android:layout_height="match_parent" />
    <TextView
        android:paddingLeft="30dp"
        android:id="@+id/title"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="Test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v7.widget.CardView>