<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.moetaz.bakingapp.fragments.ingredientsFragment">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">

    </include>

     <android.support.v7.widget.RecyclerView
         android:paddingTop="75dp"
         android:id="@+id/IngredientRecyler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"> </android.support.v7.widget.RecyclerView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_fav"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
